[package]
name = "strobe"
version = "0.2.0"
edition = "2021"
authors = ["James Logan <jlogan03@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jlogan03/strobe/"
homepage = "https://github.com/jlogan03/strobe/strobe"
description = "Fast, low-memory, elementwise array expressions on the stack. Compatible with no-std (and no-alloc) environments."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.16", default-features = false, features=["libm"] }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[features]
default = ["std"]
std = []

[[bench]]
name = "bench_mul"
harness = false
